# 2N-Analyzer

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists copy 2.txt  CMakeLists copy 3.txt  CMakeLists copy 4.txt  CMakeLists copy.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gammaNeutronFD_separation_test_run.sh  main.c  main.cpp  nFD_eff_tester_run.sh  reaction_cuts_tester_run.sh  run.csh  run.sh  tester_run_nFD_eff.sh  update_only.sh
framework/applications/: CMakeLists.txt  DetectorSimulationAnalyser.cpp  DetectorSimulationAnalyser.h  Makefile  RecoEventAnalyser.cpp  TruthLevelAnalyser.cpp
framework/classes/: CMakeLists.txt  Makefile
framework/classes/AMaps/: AMaps.cpp  AMaps.h  AMaps_beta.h  CustomSliceLimits.cpp  CustomSliceLimits.h
framework/classes/AMaps/AMaps_beta/: AMaps_beta.cpp  AMaps_beta.h
framework/classes/AMaps/AMaps_old/: AMaps_old.cpp  AMaps_old.h  CustomSliceLimits_old.h
framework/classes/DEfficiency/: DEfficiency.cpp  DEfficiency.h
framework/classes/DSCuts/: DSCuts.h
framework/classes/DataAnalyser/: DataAnalyser.cpp  DataAnalyser.h
framework/classes/DataAnalyzer/: DataAnalyser.h  DataAnalyzer.cpp  DataAnalyzer.h
framework/classes/Debugger/: Debugger.cpp  Debugger.h
framework/classes/Directories/: Directories.cpp  Directories.h
framework/classes/ExperimentParameters/: ExperimentParameters copy.cpp  ExperimentParameters.cpp  ExperimentParameters.h
framework/classes/FinalState/: FinalState.cpp  FinalState.h  FinalStateHistograms.cpp  FinalStateHistograms.h
framework/classes/MomentumResolution/: MomentumResolution.cpp  MomentumResolution.h
framework/classes/ParticleID/: ParticleID.cpp  ParticleID.h
framework/classes/RecoAnalyser_rm/: RecoAnalyser.cpp
framework/classes/Settings/: CustomPlotsDirectory.cpp  CustomPlotsDirectory.h  Settings.cpp  Settings.h
framework/classes/TLCuts/: TLCuts.cpp  TLCuts.h
framework/classes/TargetParameters/: TargetParameters.h
framework/classes/clas12ana/: clas12ana.cpp  clas12ana.h  clas12ana_ver_1_myedit.h  example_ana - Copy.cpp  example_ana.cpp  skim_events.cpp
framework/classes/clas12ana/clas12ana_ver_1_myedit/: clas12ana.h
framework/classes/clas12ana/other/: clas12ana - Copy (2).h  clas12ana - Copy.h  clas12ana_ver_1_myedit.h  example_ana - Copy.cpp  example_ana.cpp  skim_events.cpp
framework/classes/clas12ana/other_old/: clas12ana - Copy (2).h
framework/classes/gst/: gst.cpp  gst.h
framework/classes/hPlots/: hPlot1D.cpp  hPlot1D.h  hPlot1DStack.cpp  hPlot1DStack.h  hPlot2D.cpp  hPlot2D.h  hsPlots.cpp  hsPlots.h
framework/namespaces/: CMakeLists.txt  Makefile
framework/namespaces/fitters/: fitter_functions.h
framework/namespaces/fitters/fitter_functions/: fitter_functions.cpp  fitter_functions.h
framework/namespaces/gemc/: targets.h
framework/namespaces/general_utilities/: basic_tools.h  constants.h  data_processor.h  histogram_functions.h  lists.h  reco_analysis_functions.h  truth_analysis_functions_beta.h  utilities.h
framework/namespaces/general_utilities/analysis_math/: analysis_math.cpp  analysis_math.h  analysis_math_include.h  analysis_math_reco_extentions.h  analysis_math_reco_extentions_rm.h  poly_solver.cpp  poly_solver.h  polynomial_solver.cpp  polynomial_solver.h
framework/namespaces/general_utilities/analysis_physics/: analysis_physics.h
framework/namespaces/general_utilities/basic_tools/: basic_tools.cpp  basic_tools.h  basic_tools_include.h
framework/namespaces/general_utilities/constants/: constants.cpp  constants.h  constants_include.h
framework/namespaces/general_utilities/data_processor/: data_processor.cpp  data_processor.h
framework/namespaces/general_utilities/histogram_functions/: histogram_functions.cpp  histogram_functions.h
framework/namespaces/general_utilities/lists/: lists.cpp  lists.h  lists_include.h
framework/namespaces/general_utilities/reco_analysis_functions/: reco_analysis_functions.h
framework/namespaces/general_utilities/truth_analysis_functions/: truth_analysis_functions.h
framework/namespaces/general_utilities/truth_analysis_functions_beta/: truth_analysis_functions.h
framework/namespaces/general_utilities/utilities/: utilities.h  utilities_include_rm.h  utilities_reco_extentions_rm.h
framework/namespaces/plotters/PDF_canvas/: PDF_canvas.cpp  PDF_canvas.h
framework/namespaces/plotters/draw_and_save_functions/: draw_and_save_acorr_plots.cpp  draw_and_save_acorr_plots.h  draw_and_save_efficiency_plots.cpp  draw_and_save_efficiency_plots.h  draw_and_save_fs_ratio.cpp  draw_and_save_fs_ratio.h  draw_and_save_functions.h  draw_and_save_includes.h
framework/namespaces/printers/: printers.h
framework/namespaces/settings/: debugging_settings.h  zipping_settings.h
framework/namespaces/settings/PDF_canvas_settings/: PDF_canvas_settings.cpp  PDF_canvas_settings.h
framework/namespaces/settings/debugging_settings/: debugging_settings.h
framework/namespaces/settings/general_settings/: general_settings.h
framework/namespaces/setup/: code_setup.h  debugging.h  path_definitions.h  zipping.h
framework/namespaces/setup/analysis_samples/: Q2_testing_samples.h  (+6 more)
framework/structures/: CMakeLists.txt  Makefile
framework/structures/AcceptanceMapsSettings/: AcceptanceMapsSettings.h
framework/structures/AnalysisCutSettings/: AnalysisCutSettings.h
framework/structures/CodeDirectories/: CodeDirectories.cpp  CodeDirectories.h
framework/structures/CutValueManager/: CutValueManager.h
framework/structures/DataSample/: DataSample.h
framework/structures/EventSelectionSettings/: EventSelectionSettings.h
framework/structures/Histogram1D_beta/: Histogram1D.cpp
framework/structures/MomentumResolutionSettings/: MomentumResolutionSettings.h
framework/structures/RecoAnalyserSettings/: AcceptanceMapsSettings.h  AnalysisCutSettings.h  CutValueManager.h  EventSelectionSettings.h  MomentumResolutionSettings.h  RunParameters.h
framework/structures/RunParameters/: RunParameters.h
macros/CMakeTest/: CMakeLists copy.txt  CMakeLists.txt  Ex1_CLAS12ReaderChain.C  cmake_build_update.csh  cmake_rebuild.csh  main.C
(+1689 files in other folders)
